--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "idea-ionic-extra",
   "version": "7.2.15",
+  "license": "MPL-2.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
