--- a/modules/auth0/package.json
+++ b/modules/auth0/package.json
@@ -2,6 +2,21 @@
   "name": "@idea-ionic/auth0",
   "version": "7.2.15",
   "description": "IDEA Ionic Auth0 flow",
+  "license": "MPL-2.0",
+  "author": "ITER IDEA <info@iter-idea.com> (https://iter-idea.com)",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/iter-idea/IDEA-Ionic7-extra"
+  },
+  "homepage": "https://github.com/iter-idea/IDEA-Ionic7-extra/tree/main/modules/auth0",
+  "keywords": [
+    "idea",
+    "ionic",
+    "angular"
+  ],
+  "bugs": {
+    "url": "https://github.com/iter-idea/IDEA-Ionic7-extra/issues"
+  },
   "dependencies": {
     "tslib": "^2.4.1"
   },
@@ -35,21 +50,5 @@
     "idea-toolbox": "^7.x.x",
     "rxjs": "~7.8.0",
     "zone.js": "~0.14.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/iter-idea/IDEA-Ionic-extra.git"
-  },
-  "keywords": [
-    "idea",
-    "ionic",
-    "angular",
-    "auth0"
-  ],
-  "author": "ITER IDEA <info@iter-idea.com> (https://iter-idea.com)",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/iter-idea/IDEA-Ionic-extra/issues"
-  },
-  "homepage": "https://github.com/iter-idea/IDEA-Ionic-extra/tree/master/auth0"
+  }
 }
