--- a/modules/barcode/package.json
+++ b/modules/barcode/package.json
@@ -2,6 +2,21 @@
   "name": "@idea-ionic/barcode",
   "version": "7.2.15",
   "description": "IDEA Ionic barcode components",
+  "license": "MPL-2.0",
+  "author": "ITER IDEA <info@iter-idea.com> (https://iter-idea.com)",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/iter-idea/IDEA-Ionic7-extra"
+  },
+  "homepage": "https://github.com/iter-idea/IDEA-Ionic7-extra/tree/main/modules/barcode",
+  "keywords": [
+    "idea",
+    "ionic",
+    "angular"
+  ],
+  "bugs": {
+    "url": "https://github.com/iter-idea/IDEA-Ionic7-extra/issues"
+  },
   "dependencies": {
     "tslib": "^2.4.1"
   },
@@ -26,20 +41,5 @@
     "com-darryncampbell-cordova-plugin-intent": "~2.2.0",
     "rxjs": "~7.8.0",
     "zone.js": "~0.14.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/iter-idea/IDEA-Ionic-extra.git"
-  },
-  "keywords": [
-    "idea",
-    "ionic",
-    "angular"
-  ],
-  "author": "ITER IDEA <info@iter-idea.com> (https://iter-idea.com)",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/iter-idea/IDEA-Ionic-extra/issues"
-  },
-  "homepage": "https://github.com/iter-idea/IDEA-Ionic-extra/tree/master/barcode"
+  }
 }
