--- a/modules/auth0/package.json
+++ b/modules/auth0/package.json
@@ -1,54 +1,40 @@
 {
   "name": "@idea-ionic/auth0",
-  "version": "7.3.0",
+  "version": "8.0.1",
   "description": "IDEA Ionic Auth0 flow",
   "license": "MPL-2.0",
   "author": "ITER IDEA <info@iter-idea.com> (https://iter-idea.com)",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/iter-idea/IDEA-Ionic7-extra"
+    "url": "git+https://github.com/iter-idea/IDEA-Ionic8-extra"
   },
-  "homepage": "https://github.com/iter-idea/IDEA-Ionic7-extra/tree/main/modules/auth0",
+  "homepage": "https://github.com/iter-idea/IDEA-Ionic8-extra/tree/main/modules/auth0",
   "keywords": [
     "idea",
     "ionic",
     "angular"
   ],
   "bugs": {
-    "url": "https://github.com/iter-idea/IDEA-Ionic7-extra/issues"
+    "url": "https://github.com/iter-idea/IDEA-Ionic8-extra/issues"
+  },
+  "peerDependencies": {
+    "@angular/common": "^18.1.1",
+    "@angular/core": "^18.1.1",
+    "@angular/forms": "^18.1.1",
+    "@angular/platform-browser": "^18.1.1",
+    "@angular/platform-browser-dynamic": "^18.1.1",
+    "@angular/router": "^18.1.1",
+    "@auth0/auth0-angular": "^2.2.3",
+    "@capacitor/browser": "^6.0.1",
+    "@capacitor/core": "6.1.1",
+    "@idea-ionic/common": "^8.x.x",
+    "@ionic/angular": "^8.0.0",
+    "idea-toolbox": "^7.x.x",
+    "rxjs": "~7.8.0",
+    "zone.js": "~0.14.3"
   },
   "dependencies": {
     "tslib": "^2.4.1"
   },
-  "peerDependencies": {
-    "@angular/common": "^17.0.2",
-    "@angular/core": "^17.0.2",
-    "@angular/forms": "^17.0.2",
-    "@angular/platform-browser": "^17.0.2",
-    "@angular/platform-browser-dynamic": "^17.0.2",
-    "@angular/router": "^17.0.2",
-    "@auth0/auth0-angular": "^2.2.3",
-    "@capacitor/browser": "^5.1.0",
-    "@capacitor/core": "^5.6.0",
-    "@ionic/angular": "^7.4.0",
-    "idea-toolbox": "^7.x.x",
-    "rxjs": "~7.8.0",
-    "zone.js": "~0.14.2"
-  },
-  "devDependencies": {
-    "@angular/common": "^17.0.2",
-    "@angular/core": "^17.0.2",
-    "@angular/forms": "^17.0.2",
-    "@angular/platform-browser": "^17.0.2",
-    "@angular/platform-browser-dynamic": "^17.0.2",
-    "@angular/router": "^17.0.2",
-    "@auth0/auth0-angular": "^2.2.3",
-    "@capacitor/browser": "^5.1.0",
-    "@capacitor/core": "^5.6.0",
-    "@idea-ionic/common": "^7.x.x",
-    "@ionic/angular": "^7.4.0",
-    "idea-toolbox": "^7.x.x",
-    "rxjs": "~7.8.0",
-    "zone.js": "~0.14.2"
-  }
+  "sideEffects": false
 }
