--- a/modules/map/package.json
+++ b/modules/map/package.json
@@ -1,61 +1,47 @@
 {
   "name": "@idea-ionic/map",
-  "version": "7.3.0",
+  "version": "8.0.1",
   "description": "IDEA Ionic map component",
   "license": "MPL-2.0",
   "author": "ITER IDEA <info@iter-idea.com> (https://iter-idea.com)",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/iter-idea/IDEA-Ionic7-extra"
+    "url": "git+https://github.com/iter-idea/IDEA-Ionic8-extra"
   },
-  "homepage": "https://github.com/iter-idea/IDEA-Ionic7-extra/tree/main/modules/map",
+  "homepage": "https://github.com/iter-idea/IDEA-Ionic8-extra/tree/main/modules/map",
   "keywords": [
     "idea",
     "ionic",
     "angular"
   ],
   "bugs": {
-    "url": "https://github.com/iter-idea/IDEA-Ionic7-extra/issues"
+    "url": "https://github.com/iter-idea/IDEA-Ionic8-extra/issues"
+  },
+  "peerDependencies": {
+    "@angular/common": "^18.1.1",
+    "@angular/core": "^18.1.1",
+    "@angular/forms": "^18.1.1",
+    "@angular/platform-browser": "^18.1.1",
+    "@angular/platform-browser-dynamic": "^18.1.1",
+    "@angular/router": "^18.1.1",
+    "@capacitor/browser": "^6.0.1",
+    "@capacitor/core": "6.1.1",
+    "@capacitor/geolocation": "^6.0.0",
+    "@capacitor/network": "^6.0.1",
+    "@idea-ionic/common": "^8.x.x",
+    "@ionic/angular": "^8.0.0",
+    "@ionic/storage-angular": "^4.0.0",
+    "idea-toolbox": "^7.x.x",
+    "rxjs": "~7.8.0",
+    "zone.js": "~0.14.3"
+  },
+  "devDependencies": {
+    "@types/google.maps": "^3.53.6"
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.2",
     "@googlemaps/markerclustererplus": "^1.2.10",
     "tslib": "^2.4.1"
   },
-  "peerDependencies": {
-    "@angular/common": "^17.0.2",
-    "@angular/core": "^17.0.2",
-    "@angular/forms": "^17.0.2",
-    "@angular/platform-browser": "^17.0.2",
-    "@angular/platform-browser-dynamic": "^17.0.2",
-    "@angular/router": "^17.0.2",
-    "@capacitor/browser": "^5.1.0",
-    "@capacitor/core": "^5.6.0",
-    "@capacitor/geolocation": "^5.0.6",
-    "@capacitor/network": "^5.0.6",
-    "@ionic/angular": "^7.4.0",
-    "@ionic/storage-angular": "^4.0.0",
-    "idea-toolbox": "^7.x.x",
-    "rxjs": "~7.8.0",
-    "zone.js": "~0.14.2"
-  },
-  "devDependencies": {
-    "@angular/common": "^17.0.2",
-    "@angular/core": "^17.0.2",
-    "@angular/forms": "^17.0.2",
-    "@angular/platform-browser": "^17.0.2",
-    "@angular/platform-browser-dynamic": "^17.0.2",
-    "@angular/router": "^17.0.2",
-    "@capacitor/browser": "^5.1.0",
-    "@capacitor/core": "^5.6.0",
-    "@capacitor/geolocation": "^5.0.6",
-    "@capacitor/network": "^5.0.6",
-    "@idea-ionic/common": "^7.x.x",
-    "@ionic/angular": "^7.4.0",
-    "@ionic/storage-angular": "^4.0.0",
-    "@types/google.maps": "^3.53.6",
-    "idea-toolbox": "^7.x.x",
-    "rxjs": "~7.8.0",
-    "zone.js": "~0.14.2"
-  }
+  "sideEffects": false
 }
