--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "idea-ionic-extra",
-  "version": "7.3.0",
+  "version": "8.0.1",
   "license": "MPL-2.0",
   "scripts": {
     "ng": "ng",
@@ -11,30 +11,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^17.0.2",
-    "@angular/core": "^17.0.2",
-    "zone.js": "~0.14.2"
+    "@angular/animations": "^18.1.0",
+    "@angular/common": "^18.1.0",
+    "@angular/compiler": "^18.1.0",
+    "@angular/core": "^18.1.0",
+    "@angular/forms": "^18.1.0",
+    "@angular/platform-browser": "^18.1.0",
+    "@angular/platform-browser-dynamic": "^18.1.0",
+    "@angular/router": "^18.1.0",
+    "@ionic/angular": "^8.0.0",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.2.0",
-    "@angular-devkit/core": "^17.1.0",
-    "@angular-devkit/schematics": "^17.1.0",
-    "@angular-eslint/builder": "^17.0.0",
-    "@angular-eslint/eslint-plugin": "^17.0.0",
-    "@angular-eslint/eslint-plugin-template": "^17.0.0",
-    "@angular-eslint/schematics": "^17.0.0",
-    "@angular-eslint/template-parser": "^17.0.0",
-    "@angular/cli": "^17.0.0",
-    "@angular/compiler": "^17.0.2",
-    "@angular/compiler-cli": "^17.0.2",
-    "@types/google.maps": "^3.53.6",
-    "@types/node": "^16.18.40",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.46.0",
-    "ng-packagr": "^17.1.0",
-    "prettier": "^3.2.4",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "@angular-devkit/build-angular": "^18.1.1",
+    "@angular-eslint/builder": "^18.1.0",
+    "@angular-eslint/eslint-plugin": "^18.1.0",
+    "@angular-eslint/eslint-plugin-template": "^18.1.0",
+    "@angular-eslint/schematics": "^18.1.0",
+    "@angular-eslint/template-parser": "^18.1.0",
+    "@angular/cli": "^18.1.1",
+    "@angular/compiler-cli": "^18.1.0",
+    "@typescript-eslint/eslint-plugin": "^7.17.0",
+    "@typescript-eslint/parser": "^7.17.0",
+    "eslint": "^8.57.0",
+    "ng-packagr": "^18.1.0",
+    "typescript": "~5.5.2"
   }
 }
