--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@typescript-eslint/parser": "^7.17.0",
     "eslint": "^8.57.0",
     "ng-packagr": "^18.1.0",
+    "prettier": "^3.3.3",
     "typescript": "~5.5.2"
   }
 }
