chore: update bug_report.yaml

--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,107 +1,40 @@
 name: 🐞 Bug Report
-description: File a bug report with the FACCE standard
+description: File a bug report
 title: '[Bug]: <title>'
 labels: [bug]
 body:
-  - type: checkboxes
-    id: no-duplicate
+  - type: input
+    id: environment
     attributes:
-      label: Is there an existing issue for this?
-      description: Please search to see if an issue already exists for the bug you encountered.
-      options:
-        - label: I have searched the existing issues
-          required: true
-  - type: textarea
-    id: feature
+      label: In which environment(s) did you encounter the bug?
+      description: dev, prod, etc.
+      placeholder: prod
+    validations:
+      required: true
+  - type: input
+    id: context
     attributes:
-      label: Feature
-      description: Describe how the feature should work without the bug
-      placeholder: 'Example: assign a user to an activity in the dashboard'
+      label: Provide the context (team, organisation, etc.)
+      description: The ID (or name) of the team(s) or organisation(s) affected by the bug.
+      placeholder: idea
     validations:
       required: true
   - type: textarea
     id: anomaly
     attributes:
-      label: Anomaly
-      description: Describe the bug
-      placeholder: "Example: I can't add new users to the assignees list"
+      label: Describe the anomaly
+      description: Describe the feature, how the bug affects it, and how to trigger the bug.
+      placeholder: 'Example: In the dashboard, I should be able to assign a user to an activity, but when I press the button ABC, I receive the error XYZ.'
     validations:
       required: true
   - type: textarea
-    id: cause
+    id: media
     attributes:
-      label: Cause
-      description: Event or trigger that make the bug happen.
-      placeholder: 'Example: Selection of a user after clicking the "Add assignee" button'
-    validations:
-      required: true
-  - type: textarea
-    id: correction
-    attributes:
-      label: Correction (suggestion)
-      description: Ideas on how you could solve the bug (optional).
-  - type: textarea
-    id: example
-    attributes:
-      label: Example
-      description: 'Example to reproduce the bug: step-by-step example to reproduce the bug; add screenshots, if applicable.'
-      placeholder: |
-        Example:
-          1. Sign-in with the team XYZ and a non-admin user.
-          2. Open the dasboard.
-          3. Select an activity not completed.
-          4. Enter in edit mode.
-          5. Try to add a new user as assignee of the activity.
-    validations:
-      required: true
-  - type: dropdown
-    id: environment
-    attributes:
-      label: On which environments did you encounter the bug?
-      multiple: true
-      options:
-        - dev
-        - prod
-    validations:
-      required: true
-  - type: input
-    id: team
-    attributes:
-      label: Team (or context)
-      description: The ID (or name) of the team (or context) affected by the bug, to help the developers to replicate it.
-    validations:
-      required: false
-  - type: dropdown
-    id: device
-    attributes:
-      label: What device are you seeing the problem on?
-      multiple: true
-      options:
-        - Desktop (Windows)
-        - Desktop (MacOS)
-        - Tablet (Android)
-        - Tablet (iOS)
-        - Smartphone (Android)
-        - Smartphone (iOS)
-        - Other
-    validations:
-      required: true
-  - type: dropdown
-    id: browsers
-    attributes:
-      label: What browsers are you seeing the problem on?
-      multiple: true
-      options:
-        - Firefox
-        - Chrome
-        - Safari
-        - Microsoft Edge
-        - App
-        - Other
-    validations:
-      required: true
+      label: Add videos and pictures
+      description: Add any media to help explain the bug and how to trigger it step-by-step.
+      placeholder: 'Drag and drop images and videos here'
   - type: markdown
     attributes:
       value: |
         ---
-        ## Thanks for taking the time to fill out this bug report!
+        _Please note: all fields are necessary to help the developer understand and replicate the bug; **any incomplete Issue will be marked invalid and not processed**._
