--- a/modules/barcode/package.json
+++ b/modules/barcode/package.json
@@ -18,15 +18,15 @@
     "url": "https://github.com/iter-idea/IDEA-Ionic8-extra/issues"
   },
   "peerDependencies": {
-    "@angular/common": "^18.1.0",
-    "@angular/core": "^18.1.0",
-    "@angular/forms": "^18.1.0",
+    "@angular/common": "^18.2.8",
+    "@angular/core": "^18.2.8",
+    "@angular/forms": "^18.2.8",
     "@capacitor-mlkit/barcode-scanning": "^6.1.0",
-    "@capacitor/core": "6.1.1",
+    "@capacitor/core": "^6.1.1",
     "@ionic/angular": "^8.0.0",
     "com-darryncampbell-cordova-plugin-intent": "^2.2.0",
     "rxjs": "~7.8.0",
-    "zone.js": "~0.14.3"
+    "zone.js": "~0.14.10"
   },
   "dependencies": {
     "tslib": "^2.4.1"
