--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -18,21 +18,21 @@
     "url": "https://github.com/iter-idea/IDEA-Ionic8-extra/issues"
   },
   "peerDependencies": {
-    "@angular/common": "^18.1.0",
-    "@angular/core": "^18.1.0",
-    "@angular/forms": "^18.1.0",
-    "@angular/router": "^18.1.0",
+    "@angular/common": "^18.2.8",
+    "@angular/core": "^18.2.8",
+    "@angular/forms": "^18.2.8",
+    "@angular/router": "^18.2.8",
     "@capacitor/browser": "^6.0.1",
-    "@capacitor/core": "6.1.1",
+    "@capacitor/core": "^6.1.1",
     "@ionic/angular": "^8.0.0",
     "@ionic/storage-angular": "^4.0.0",
     "idea-toolbox": "^7.x.x",
     "rxjs": "~7.8.0",
-    "zone.js": "~0.14.3"
+    "zone.js": "~0.14.10"
   },
   "dependencies": {
     "signature_pad": "^4.1.7",
-    "tslib": "^2.3.0"
+    "tslib": "^2.4.1"
   },
   "sideEffects": false
 }
