--- a/modules/auth/package.json
+++ b/modules/auth/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@idea-ionic/auth",
-  "version": "8.1.2",
+  "version": "8.1.3",
   "description": "IDEA Ionic auth flow",
   "license": "MPL-2.0",
   "author": "ITER IDEA <info@iter-idea.com> (https://iter-idea.com)",
@@ -26,7 +26,7 @@
     "@angular/router": "^18.1.0",
     "@capacitor/browser": "^6.0.1",
     "@capacitor/core": "6.1.1",
-    "@idea-ionic/common": "^8.x.x",
+    "@idea-ionic/common": "8.1.3",
     "@ionic/angular": "^8.0.0",
     "@ionic/storage-angular": "^4.0.0",
     "idea-toolbox": "^7.x.x",
