--- a/modules/auth0/package.json
+++ b/modules/auth0/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@idea-ionic/auth0",
-  "version": "8.1.2",
+  "version": "8.1.3",
   "description": "IDEA Ionic Auth0 flow",
   "license": "MPL-2.0",
   "author": "ITER IDEA <info@iter-idea.com> (https://iter-idea.com)",
@@ -27,7 +27,7 @@
     "@auth0/auth0-angular": "^2.2.3",
     "@capacitor/browser": "^6.0.1",
     "@capacitor/core": "6.1.1",
-    "@idea-ionic/common": "^8.x.x",
+    "@idea-ionic/common": "8.1.3",
     "@ionic/angular": "^8.0.0",
     "idea-toolbox": "^7.x.x",
     "rxjs": "~7.8.0",
