--- a/modules/agenda/package.json
+++ b/modules/agenda/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@idea-ionic/agenda",
-  "version": "8.1.3",
+  "version": "8.1.4",
   "description": "IDEA Ionic agenda (calendar)",
   "license": "MPL-2.0",
   "author": "ITER IDEA <info@iter-idea.com> (https://iter-idea.com)",
@@ -27,7 +27,7 @@
     "@angular/router": "^18.1.0",
     "@capacitor/browser": "^6.0.1",
     "@capacitor/core": "6.1.1",
-    "@idea-ionic/common": "8.1.3",
+    "@idea-ionic/common": "8.1.x",
     "@ionic/angular": "^8.0.0",
     "@ionic/storage-angular": "^4.0.0",
     "angular-calendar": "^0.31.1",
