--- a/modules/map/package.json
+++ b/modules/map/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@idea-ionic/map",
-  "version": "8.1.3",
+  "version": "8.1.4",
   "description": "IDEA Ionic map component",
   "license": "MPL-2.0",
   "author": "ITER IDEA <info@iter-idea.com> (https://iter-idea.com)",
@@ -28,7 +28,7 @@
     "@capacitor/core": "6.1.1",
     "@capacitor/geolocation": "^6.0.0",
     "@capacitor/network": "^6.0.1",
-    "@idea-ionic/common": "8.1.3",
+    "@idea-ionic/common": "8.1.x",
     "@ionic/angular": "^8.0.0",
     "@ionic/storage-angular": "^4.0.0",
     "idea-toolbox": "^7.x.x",
