--- a/modules/editor/package.json
+++ b/modules/editor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@idea-ionic/editor",
-  "version": "8.5.13",
+  "version": "8.6.0",
   "description": "IDEA Ionic editor component",
   "license": "MPL-2.0",
   "author": "ITER IDEA <info@iter-idea.com> (https://iter-idea.com)",
@@ -18,17 +18,17 @@
     "url": "https://github.com/iter-idea/IDEA-Ionic8-extra/issues"
   },
   "peerDependencies": {
-    "@angular/common": "^18.2.8",
-    "@angular/core": "^18.2.8",
-    "@angular/forms": "^18.2.8",
-    "@capacitor/core": "^6.1.1",
+    "@angular/common": "^20.1.3",
+    "@angular/core": "^20.1.3",
+    "@angular/forms": "^20.1.3",
+    "@capacitor/core": "^7.4.2",
     "@idea-ionic/common": "^8.x.x",
-    "@ionic/angular": "^8.0.0",
+    "@ionic/angular": "^8.6.5",
     "rxjs": "~7.8.0",
-    "zone.js": "~0.14.10"
+    "zone.js": "~0.15.1"
   },
   "dependencies": {
-    "@kolkov/angular-editor": "3.0.0-beta.0",
+    "@kolkov/angular-editor": "^3.0.0-beta.2",
     "docs-soap": "^1.2.1",
     "tslib": "^2.4.1"
   },
