--- a/modules/teams/package.json
+++ b/modules/teams/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@idea-ionic/teams",
-  "version": "8.5.13",
+  "version": "8.6.0",
   "description": "IDEA Ionic teams components",
   "license": "MPL-2.0",
   "author": "ITER IDEA <info@iter-idea.com> (https://iter-idea.com)",
@@ -18,21 +18,22 @@
     "url": "https://github.com/iter-idea/IDEA-Ionic8-extra/issues"
   },
   "peerDependencies": {
-    "@angular/common": "^18.2.8",
-    "@angular/core": "^18.2.8",
-    "@angular/forms": "^18.2.8",
-    "@angular/platform-browser": "^18.2.8",
-    "@angular/platform-browser-dynamic": "^18.2.8",
-    "@angular/router": "^18.2.8",
-    "@capacitor/browser": "^6.0.3",
-    "@capacitor/camera": "^6.0.2",
+    "@angular/common": "^20.1.3",
+    "@angular/core": "^20.1.3",
+    "@angular/forms": "^20.1.3",
+    "@angular/platform-browser": "^20.1.3",
+    "@angular/platform-browser-dynamic": "^20.1.3",
+    "@angular/router": "^20.1.3",
+    "@capacitor/browser": "^7.0.1",
+    "@capacitor/camera": "^7.0.1",
+    "@capacitor/core": "^7.4.2",
     "@idea-ionic/common": "^8.x.x",
     "@idea-ionic/uncommon": "^8.x.x",
-    "@ionic/angular": "^8.0.0",
+    "@ionic/angular": "^8.6.5",
     "@ionic/storage-angular": "^4.0.0",
     "idea-toolbox": "^7.x.x",
     "rxjs": "~7.8.0",
-    "zone.js": "~0.14.10"
+    "zone.js": "~0.15.1"
   },
   "dependencies": {
     "heic2any": "^0.0.4",
