--- a/modules/uncommon/package.json
+++ b/modules/uncommon/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@idea-ionic/uncommon",
-  "version": "8.5.13",
+  "version": "8.6.0",
   "description": "IDEA Ionic uncommon components",
   "license": "MPL-2.0",
   "author": "ITER IDEA <info@iter-idea.com> (https://iter-idea.com)",
@@ -18,18 +18,19 @@
     "url": "https://github.com/iter-idea/IDEA-Ionic8-extra/issues"
   },
   "peerDependencies": {
-    "@angular/common": "^18.2.8",
-    "@angular/core": "^18.2.8",
-    "@angular/forms": "^18.2.8",
-    "@angular/router": "^18.2.8",
-    "@capacitor/network": "^6.0.1",
-    "@capacitor/push-notifications": "^6.0.1",
+    "@angular/common": "^20.1.3",
+    "@angular/core": "^20.1.3",
+    "@angular/forms": "^20.1.3",
+    "@angular/router": "^20.1.3",
+    "@capacitor/core": "^7.4.2",
+    "@capacitor/network": "^7.0.1",
+    "@capacitor/push-notifications": "^7.0.1",
     "@idea-ionic/common": "^8.x.x",
-    "@ionic/angular": "^8.0.0",
+    "@ionic/angular": "^8.6.5",
     "@ionic/storage-angular": "^4.0.0",
     "idea-toolbox": "^7.x.x",
     "rxjs": "~7.8.0",
-    "zone.js": "~0.14.10"
+    "zone.js": "~0.15.1"
   },
   "dependencies": {
     "tslib": "^2.4.1"
