--- a/modules/uncommon/package.json
+++ b/modules/uncommon/package.json
@@ -22,12 +22,14 @@
     "@angular/core": "^20.1.3",
     "@angular/forms": "^20.1.3",
     "@angular/router": "^20.1.3",
+    "@capacitor/camera": "^7.0.2",
     "@capacitor/core": "^7.4.2",
     "@capacitor/network": "^7.0.1",
     "@capacitor/push-notifications": "^7.0.1",
     "@idea-ionic/common": "^8.x.x",
     "@ionic/angular": "^8.6.5",
     "@ionic/storage-angular": "^4.0.0",
+    "heic2any": "^0.0.4",
     "idea-toolbox": "^7.x.x",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.1"
